# Rust-Masterclass

./: .gitignore  flake.nix
packet/: Cargo.toml  build.rs
packet/packets/: authenticate.proto  packet.proto  ping.proto
packet/src/: authenticate.rs  lib.rs  packet_manager.rs  ping.rs
tcp-client/: Cargo.toml
tcp-client/src/: client.rs  event.rs  lib.rs  message.rs  packet_manager.rs  state.rs  transporter.rs
tcp-server/: Cargo.toml
tcp-server/crates/network/: Cargo.toml
tcp-server/crates/network/src/: lib.rs
tcp-server/crates/server/: Cargo.toml
tcp-server/crates/server/src/: lib.rs  packet_handler.rs  server.rs  server_manager.rs
tcp-server/crates/server/src/io/: client.rs  message.rs  mod.rs
tcp-server/crates/server/src/server_message/: mod.rs  server_message_handler.rs  server_message_sender.rs
tcp-server/crates/server/src/tcp/: acceptor.rs  mod.rs  transporter.rs
tcp-server/src/: main.rs
