[package]
name = "tcp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
packet.workspace = true

[workspace.dependencies]
packet = { path = "../packet" }

tokio = { version = "1.35", features = [ "rt", "net", "sync", "io-util", "time", "macros", "rt-multi-thread" ] }
