[package]
name = "tcp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
network.workspace = true
tokio.workspace = true
packet.workspace = true

[workspace.dependencies]
network = { path = "crates/network" }
server = { path = "crates/server" }
packet = { path = "../packet" }

tokio = { version = "1.35", features = [ "rt", "net", "sync", "io-util", "time", "macros", "rt-multi-thread" ] }
